<resources>
    <string name="app_name">tracker</string>
    <string name="service_listener">service_listener</string>
    <string name="notify_request">Request</string>
    <string name="notify_connect">Connect</string>
    <string name="ticker_request">You just received a request from %1$s.</string>
    <string name="ticker_meeting">You are invited to a meeting by %1$s at %2$s.</string>
    <string name="ticker_accept_request">%1$s accepted your request.</string>
    <string name="ticker_accept_meeting">%1$s joined a meeting with you at %2$s.</string>
    <string name="ticker_disconnect">Your connection with %1$s is terminated.</string>
    <string name="label_notify_sender">Sender:</string>
    <string name="label_notify_location_service_running">Location Monitoring Service is Active</string>
    <string name="label_select_users_to_share">Username</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_incoming_requests">Incoming Requests</string>
    <string name="label_send_request">Send Request</string>
    <string name="label_create_marker">Create Marker</string>
    <string name="server_protocol">http://</string>
    <string name="server_ip">192.168.8.21</string>
    <string name="server_localhost">192.168.8.21</string>
    <string name="server_dbuser">appdbadmin</string>
    <string name="server_dbname">appdb</string>
    <string name="server_dbpassword">h3ll0@ndr01d</string>
    <string name="encrypt_key_spec">This is a random text.</string>
    <string name="encrypt_encoding">UTF-8</string>
    <string name="encrypt_key_factory">DES</string>
    <string name="server_conn_timeout">15000</string>
    <string name="sqltask_max_iter">10</string>
    <string name="php_index">index.php</string>
    <string name="php_update">update.php</string>
    <string name="php_insert">insert.php</string>
    <string name="php_delete">delete.php</string>
    <string name="php_select">select.php</string>
    <string name="progress_signingout">Signing out...</string>
    <string name="progress_savingmarker">Saving marker...</string>
    <string name="progress_deletingmarker">Deleting marker...</string>
    <string name="progress_updatingchanges">Updating Changes...</string>
    <string name="progress_retrievingdata">Retrieving data...</string>
    <string name="progress_sendingrequest">Sending request...</string>
    <string name="progress_validatingaccount">Validating user account...</string>
    <string name="progress_checkingduplicaterequest">Checking duplicate request...</string>
    <string name="progress_collectingdata">Retrieving saved markers from the server...</string>
    <string name="progress_retrievingcontacts">Retrieving Contacts from the server...</string>
    <string name="progress_retrievingsharedmarkers">Retrieving shared markers from the server...</string>
    <string name="progress_generatingid">Generating Firebase ID. Please wait...</string>
    <string name="progress_connecting">Connecting. Please wait...</string>
    <string name="progress_setting_meeting_point">Setting your target location...</string>
    <string name="progress_cancel_meeting">Cancelling your destination...</string>
    <string name="progress_loading_user_directory">Loading User Directory...</string>
    <string name="progress_moving_marker">Moving Marker...</string>
    <string name="progress_preparing_contact_list">Preparing Contact List...</string>
    <string name="progress_sending_meeting_requests">Sending Your Request...</string>
    <string name="progress_processing_sender_request">Processing...</string>
    <string name="progress_searchinggpssignal">Searching your Current Location...</string>
    <string name="progress_reconnecting">Reconnecting...</string>
    <string name="error_incorrect_password">Password is incorrect.</string>
    <string name="error_reg_failed">Account Registration Failed.</string>
    <string name="error_server_down">Server is under maintenance. Pls try again later.</string>
    <string name="error_update_failed">Database update failed.</string>
    <string name="error_network_unreachable">Network is unreachable. Pls check your Internet connection.</string>
    <string name="error_system_admin">Internal System Error.</string>
    <string name="error_insert_failed">Database insert failed.</string>
    <string name="error_delete_failed">Database delete failed.</string>
    <string name="error_select_failed">Database select failed.</string>
    <string name="error_invalid_email">Username is invalid. (Must be 8-15 chars, alphanumeric and only contains symbol hyphen or underscore)</string>
    <string name="error_invalid_password">Password is invalid. (Must be 8-15 chars, contains at least 1 digit,1 lowercase,1 uppercase letter and symbols \'@#$%\')</string>
    <string name="error_email_required">Username is required.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_gps_disabled">Location Services is required. Pls turn on your GPS.</string>
    <string name="error_participant_not_yet_registered">User is not yet registered.</string>
    <string name="error_request_already_sent">Either you/recipient have already sent a request.</string>
    <string name="error_participant_cant_be_own_email">You cannot send request to yourself.</string>
    <string name="error_unable_to_generate_id">Unable to generate firebase id.</string>
    <string name="error_password_encryption">Encryption Error Encountered.</string>
    <string name="error_duplicate_marker_not_allowed">Duplicate title for marker is not allowed. Please choose another title.</string>
    <string name="error_multiple_login_not_allowed">Multiple Login is not allowed.</string>
    <string name="error_marker_already_deleted">Cannot complete this task. Marker already deleted by the owner.</string>
    <string name="error_recipient_not_on_your_contact_list">Recipient is not on your contact list.</string>
    <string name="error_device_is_already_registered">Device is already registered.</string>
    <string name="error_marker_cannot_be_deleted">Marker cannot be deleted because it is currently used.</string>
    <string name="message_login_successful">Account has been successfully logged in.</string>
    <string name="message_reg_successful">Account Registration is successful.</string>
    <string name="message_update_successful">Database update is successful.</string>
    <string name="message_insert_successful">Database insert is successful.</string>
    <string name="message_delete_successful">Database delete is successful.</string>
    <string name="message_select_successful">Database select is successful.</string>
    <string name="message_select_empty">Database select results empty.</string>
    <string name="message_request_send_successful">A request has been sent to %1$s.</string>
    <string name="message_signout_successful">Signout successful.</string>
    <string name="message_no_records_found">No Records Found.</string>
    <string name="message_loading_users_successful">Loading Users Successful</string>
    <string name="message_welcome_user">Hi %1$s. Welcome to %3$s! Today is %2$s.  You are located at %4$s.</string>
    <string name="message_marker_created">Marker has been created.</string>
    <string name="message_markers_retrieved">Markers are successfully retrieved.</string>
    <string name="message_marker_deleted">Marker has been deleted.</string>
    <string name="message_marker_updated">Marker has been updated.</string>
    <string name="message_meeting_point_set">You are now heading to this location.</string>
    <string name="message_marker_moved_success">Marker has been moved.</string>
    <string name="message_meeting_point_unset">You are no longer heading to this location.</string>
    <string name="message_has_been_added">has been added to your contact list.</string>
    <string name="message_reject_successful">You have successfully rejected.</string>
    <string name="message_contacts_retrieved">Contacts are successfully retrieved.</string>
    <string name="message_no_contacts">No Contacts Found.</string>
    <string name="message_no_markers">No Markers Found.</string>
    <string name="message_no_shared_markers">No Shared Markers Found.</string>
    <string name="message_meeting_request">Request Connection Sent.</string>
    <string name="message_meeting_request_accepted">You accepted %1$s connection request.</string>
    <string name="message_meeting_request_rejected">You rejected %1$s connection request.</string>
    <string name="message_user_is_now_disconnected">You are now disconnected to %1$s.</string>
    <string name="message_target_reached">You have successfully reached the target point.</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_move_marker">Do you want to move the selected marker to this location?</string>
    <string name="prompt_delete_marker">Do you want to delete the selected marker?</string>
    <string name="prompt_disconnect">Do you want to terminate connection with this user?</string>
    <string name="prompt_set_marker">Do you want to start heading to this location?</string>
    <string name="prompt_stop_marker">Do you want to stop heading to this location?</string>
    <string name="prompt_share_marker">Share your marker to anyone in your contact list:</string>
    <string name="prompt_accept_request">You were invited by %1$s to meet at location %2$s. Do you want to accept this request?"</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_enter_marker_details">Enter marker details:</string>
    <string name="prompt_markers">Markers</string>
    <string name="prompt_contacts">Contacts</string>
    <string name="prompt_meetings">Meetings</string>
    <string name="prompt_settings">Settings</string>
    <string name="prompt_signout">Sign Out</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_users_directory">Contact List</string>
    <string name="title_account">Account</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_enable_tracking">Track Me</string>
    <string name="pref_description_enable_tracking">This will enable your friends to see you online. Location and internet is required to turn on.</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Enter your name here</string>
    <string name="pref_title_email">Username</string>
    <string name="pref_default_email">android@email.com</string>
    <string name="pref_map_zoom_level">Zoom Level</string>
    <string name="pref_default_map_zoom_level">12</string>
    <string name="pref_header_data_sync">Location</string>
    <string name="pref_title_sync_frequency">Sync Intervals</string>
    <string name="pref_title_sign_out">Sign out</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>35 seconds</item>
        <item>40 seconds</item>
    </string-array>
</resources>