<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item android:title="General" android:id="@+id/general_id">
            <menu>
                <item
                    android:id="@+id/nav_markers"
                    android:icon="@drawable/create_marker"
                    android:title="@string/prompt_markers" />
                <item
                    android:id="@+id/nav_participants"
                    android:icon="@drawable/contacts"
                    android:title="@string/prompt_contacts" />
                <item
                    android:id="@+id/nav_meeting"
                    android:icon="@drawable/meetings"
                    android:title="@string/prompt_meetings" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item android:title="@string/title_account" android:id="@+id/connected_users_id">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/prompt_settings" />
                <item
                    android:id="@+id/nav_signout"
                    android:icon="@drawable/sign_out"
                    android:title="@string/prompt_signout" />
            </menu>
        </item>
    </group>
</menu>